# fanfiction-helper

./: .gitignore  CMakeLists.txt  FanfictionHelper.pyproj  FanfictionHelper.sln  LICENSE  README.md  fandom_urls.txt  notes.txt  scraper.py  story.py  tmp.txt
database/: database_characters.txt  database_fandoms.txt
docs/: error_explanations.txt  notes.txt
fandom_info/: League-of-Legends.txt  lol_info.txt  mha_info.txt
fandoms/: genders.txt
fandoms/Harry Potter/: info.txt
fandoms/Harry Potter/testcases/: slash1.txt  straight1.txt
fandoms/Harry-Potter/: exclusion_keywords.txt  genders.txt
fandoms/Harry-Potter/testcases/: slash1.txt  straight1.txt
fandoms/My Hero Academia/: info.txt
fandoms/My Hero Academia/testcases/: slash1.txt
python/: c_shared.py  gui.py  scraper.py  story.py
server/: CMakeLists.txt  client.cpp  database.cpp  database.hpp  main.cpp  server.cpp  server.hpp  story.cpp  story.hpp
server/cmake/: helpful_functions.cmake  platform_defines.hpp.in
server/database/: database_characters.txt
server/shared/: assert.hpp  core_defines.hpp  filesystem.cpp  filesystem.hpp  logger.hpp  platform_defines.hpp
src/: filters.py  gui.py  main.py  scraper.py  story.py  story_database.py  test.py
src/web_interface/: web.py
src/web_interface/templates/: index.html  template.html
testcases/: Harry-Potter_slash1.txt  Harry-Potter_straight1.txt
